--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ body{
 /*COMPANY */
 
 #company {
-    background:#ccc ;
+    background:#333 ;
     color: #fff;
     padding: 10px 0;
 }
@@ -151,14 +151,60 @@ body{
     color:#fff;
   }
 
-  
- 
-  
+  /*ABOUT*/
 
+#page{
+    margin-bottom:40px ;
+}
 
+/* SERVICES */
 
+.services ul li {
+    list-style: none;
+    padding: 10px;
+}
 
+.services ul li:nth-child(odd){  /*CSS3 */
+    background:#333;
+    color:#fff ;
+}
 
+.services ul li:nth-child(even){
+    background:#56a79a;
+    color:#fff;
+  }
+
+  /* CONTACT */
+
+  .contact form {
+      background: #333;
+      color:#fff;
+      padding: 20px;
+
+  }
+
+  .contact form input {
+      width: 50%;
+      height: 30px;
+      margin-bottom: 10px;
+  }
+
+  .contact form textarea {
+      width: 50%;
+      height: 100px;
+  }
+
+  .contact form button {
+      width: 50%;
+      padding: 10px;
+      border:0;
+      background-color: #222;
+      color:#fff;
+      font-size: 15px;
+  }
+  .contact form label {
+      text-transform: uppercase;
+  }
 
   /*Media Query*/
 
